# enko

./: .gitignore  .pre-commit-config.yaml  Enko 优化建议汇总.md  Enko 加固增强 — 全量实施计划.md  HARDENING_PRIORITY_TRACKER.md  README.md  auto-protect-demo.txt  full-open-protect.txt  high-vmp-protect.txt  pyproject.toml  requirements-dev.txt  run_emu_test.bat  test-protect.txt
.github/workflows/: ci.yml
demo-app/: dex2c-methods.txt  extract-methods.txt  settings.gradle  vmp-dex-methods.txt
demo-app/app/: build.gradle  obf-strings.properties  proguard-rules.pro
demo-app/app/src/main/: AndroidManifest.xml
demo-app/app/src/main/res/values/: strings.xml
deploy/: config.env.example  deploy.py  enko-db-backup.service  enko-db-backup.sh  enko-db-backup.timer  enko-web.service  nginx-enko-rhel.conf  nginx-enko.conf  requirements.txt  setup-rhel.sh  setup.sh  update.bat  update.sh
docs/: DEPLOY-UBUNTU.md  DEPLOY.md  OPERATIONS.md  VMP_BLOB_FORMAT.md
en/: auto-protect-apppkg.txt  auto-protect-flutter.txt  auto-protect-full.txt
packer/: ai_decoy.py  auto_protect_map.py  dex_parser.py  dex_writer.py  harden_apk.py  method_extractor.py  release_manifest_tool.py  vmp_blob_compat.py  vmp_compiler.py  vmp_stub_gen.py
packer/dex2c/: __init__.py  compiler.py  translator.py
release/: engine_manifest.json  policy.json  presets.json  release_manifest.json  rules.json
shell-app/: settings.gradle
shell-app/app/: build.gradle  proguard-dict-classes.txt  proguard-dict-packages.txt  proguard-rules.pro
shell-app/app/src/main/: AndroidManifest.xml
shell-app/app/src/main/cpp/: CMakeLists.txt  enko_aes.c  enko_aes.h  enko_anti_debug.c  enko_anti_debug.h  enko_anti_dump.c  enko_anti_dump.h  enko_art_hook.c  enko_extract.c  enko_extract.h  enko_gcm.c  enko_gcm.h  enko_integrity.c  enko_integrity.h  enko_jni.c  enko_key.c  enko_key.h  enko_obfstr.h  enko_vmp.c  enko_vmp.h
shell-app/app/src/main/res/values/: strings.xml
test_apks/: flag_extract_methods.txt  flag_vmp_methods.txt  flag_vmp_verify_only.txt  flag_vmp_verify_recover.txt  flag_vmp_verify_recover_derive.txt  large_report.json  small_report.json
test_apks/large_app/: settings.gradle
test_apks/large_app/app/: build.gradle
test_apks/large_app/app/src/main/: AndroidManifest.xml
test_apks/large_app/app/src/main/res/drawable/: ic_launcher_background.xml
test_apks/large_app/app/src/main/res/layout/: activity_fifth.xml  activity_fourth.xml  activity_main.xml  activity_second.xml  activity_third.xml
test_apks/large_app/app/src/main/res/values/: strings.xml
test_apks/scenario_app/: protection-map-ui-safe.txt  protection-map.txt  settings.gradle
test_apks/scenario_app/app/: build.gradle
test_apks/scenario_app/app/src/main/: AndroidManifest.xml
test_apks/scenario_app/app/src/main/cpp/: CMakeLists.txt  scenario_native.c
test_apks/small_app/: settings.gradle
test_apks/small_app/app/: build.gradle
test_apks/small_app/app/src/main/: AndroidManifest.xml
tests/: test_ai_decoy.py  test_android_semantic_smoke.py  test_android_semantic_smoke_cli.py  test_auto_protect_map.py  test_backend.py  test_check_repo_hygiene.py  test_ci_workflow.py  test_clean_workspace.py  test_deploy_rhel.py  test_deploy_ubuntu.py  test_dex2c_translator.py  test_dex_parser.py  test_dump_resistance_check.py  test_method_extractor.py  test_polymorphic_shell.py  test_release_manifest_tool.py  test_risk_response_policy.py  test_run_scenario_matrix.py  test_run_semantic_catalog.py  test_run_small_semantic_regression.py  test_shell_vmp_targets.py  test_summarize_smoke_diagnostics.py  test_views_split.py  test_vmp_compiler.py  test_vmp_v5_roundtrip.py  test_web_common_command.py
tools/: android_semantic_smoke.py  apktool  apktool.bat  check_repo_hygiene.py  clean_workspace.py  dump_resistance_check.py  gen_obfstr.py  install_hikari_ollvm.sh  obfstr_strings.txt  run_scenario_matrix.py  run_semantic_catalog.py  run_small_semantic_regression.py  summarize_smoke_diagnostics.py  vmp_blob_inspect.py
web-console/: README.md  app-legacy.js  app.js  common.py  enko-hardening-features.json  index-legacy.html  index-visual.html  index.html  redesign.css  server.py  server_prod.py  styles.css  theme.css
web-console/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web-console/frontend/src/: App.tsx  api.ts  main.tsx  styles.css
web-console/js/: analyzer.js  api.js  jobs.js  report.js  ui.js  utils.js  views.js
web-console/react-dist/: index.html
web-console/react-dist/assets/: index-3wL_kcEd.js  index-CZDvl-JU.css  index-CsjwkYpt.js  index-E_tcjyDo.js  index-JMdmampW.css  index-JSpI2Ly6.js
web-console/views/: admin.html  dashboard.html  job-detail.html  jobs.html  new-job.html  profiles.html  reports.html
(+155 files in other folders)
